<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/next_button"
        android:scaleType="centerCrop"
        android:src="@drawable/startup" />

    <TextView
        android:id="@+id/notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notice"
        android:textColor="@color/red"
        android:textSize="@dimen/_25sdp"
        android:textStyle="italic|bold"
        android:layout_margin="@dimen/_10sdp"
        android:layout_centerInParent="true"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notice_info"
        android:textColor="@color/green"
        android:textSize="@dimen/_20sdp"
        android:textStyle="italic"
        android:layout_below="@+id/notice" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/_25sdp"
        android:background="@drawable/startup_button"
        android:text="@string/next_button"
        android:textColor="@color/white" />
</RelativeLayout>